Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link>
     <link>
-    
+    <script></script>
   </head>
   <body>
     <header>
