--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <link>
-    <link>
+    <link rel="" href="">
+    <link rel="" href="">
     <script></script>
   </head>
   <body>
